# consilium

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  pytest.ini
src/: cli.py  core.py  main.py  web_app.py
src/councillors/: __init__.py  base.py  claude_sonnet_v4.py  llama_3_3_70B.py  nova_lite_v2.py  nova_premier.py  nova_pro.py
src/memory/: __init__.py  summarizer.py
src/orchestrator/: __init__.py  engine.py
tests/: README.md  __init__.py  conftest.py  test_councillors.py  test_orchestrator.py  test_summarizer.py
